--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "tundutoll",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "build": "bun run build/build.config.ts"
+    "build": "bun run build/build.config.ts",
+    "start": "bun run dist/src/index.js"
   },
   "dependencies": {
     "hono": "^4.5.10"
