feat: add dev script

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tundutoll",
   "scripts": {
-    "dev": "bun run --hot src/index.ts",
-    "build": "bun run build/build.config.ts",
+    "dev": "bun run scripts/dev.ts",
+    "build": "bun run scripts/build.ts",
     "start": "bun run dist/src/index.js"
   },
   "dependencies": {
-    "hono": "^4.5.10"
+    "hono": "^4.5.11"
   },
   "devDependencies": {
     "@types/bun": "latest"
