--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,7 @@
     "moduleResolution": "Bundler",
     "strict": true,
     "jsx": "react-jsx",
-    "lib": [
-      "es2023",
-      "dom",
-      "dom.iterable"
-    ],
+    "lib": ["es2023", "dom", "dom.iterable"],
     "jsxImportSource": "hono/jsx"
   }
 }
